--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/prog3_td2
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto = none
+spring.flyway.locations=classpath:/db/migration
+spring.jpa.open-in-view=true
